--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,10 @@ h4 {
     align-self: end;
 }
 
+.sub-header>div:last-of-type .sub-link {
+    text-align: center;
+}
+
 
 /* Media Queries */
 
@@ -162,5 +166,24 @@ h4 {
     .header .header-content {
         text-align: center;
         padding: 0 20px;
+    }
+    .header .header-text-1 {
+        margin-bottom: 40px;
+    }
+    .header .header-text-2 {
+        display: none;
+    }
+    .sub-header {
+        grid-template-columns: 1fr;
+        text-align: center;
+        gap: 20px;
+    }
+    .sub-header img {
+        width: 250px;
+        margin: auto;
+    }
+    .sub-header>div:last-of-type {
+        justify-self: center;
+        align-self: center;
     }
 }
