--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,17 @@ h4 {
     text-decoration: underline;
 }
 
+.text-xl {
+    font-size: 70px;
+    font-weight: bold;
+}
+
+.sub-text {
+    max-width: 850px;
+    margin-bottom: 10px;
+    font-size: 24px;
+}
+
 
 /* Header */
 
@@ -100,6 +111,8 @@ h4 {
     display: flex;
     justify-content: flex-end;
     padding: 20px 40px;
+    z-index: 2;
+    position: relative;
 }
 
 .header nav .login-btn {
@@ -135,6 +148,17 @@ h4 {
     margin: 25px 0;
 }
 
+.header::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 180px;
+    z-index: 1;
+    background: linear-gradient( 180deg, rgba(0, 0, 0, 0.76) 15.54%, rgba(0, 0, 0, 0.192) 60.23%, rgba(0, 0, 0, 8e-5) 100%);
+}
+
 
 /* Sub Header */
 
@@ -157,7 +181,70 @@ h4 {
 }
 
 
+/* Categories */
+
+.categories {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 90px 40px;
+}
+
+.categories .covers {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    margin-top: 40px;
+}
+
+.categories .covers>div {
+    height: 500px;
+    width: 300px;
+    position: relative;
+}
+
+.categories .cover-grad {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient( 156.82deg, rgba(0, 0, 0, 0.6) 4.58%, rgba(0, 0, 0, 0) 69.61%), linear-gradient(24.5deg, rgba(0, 0, 0, 0.2) 4.71%, rgba(0, 0, 0, 0) 71.49%)
+}
+
+.categories .cover-text {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    text-align: left;
+}
+
+.categories .cover-1 {
+    background: url('../assets//cover-1.jpg') no-repeat center center/cover;
+}
+
+.categories .cover-2 {
+    background: url('../assets//cover-2.jpg') no-repeat center center/cover;
+}
+
+.categories .cover-3 {
+    background: url('../assets//cover-3.jpg') no-repeat center center/cover;
+}
+
+.categories .cover-4 {
+    background: url('../assets//cover-4.jpg') no-repeat center center/cover;
+}
+
+
 /* Media Queries */
+
+@media(max-width: 1100px) {
+    .categories .covers {
+        grid-template-columns: 1fr 1fr;
+    }
+}
 
 @media(max-width: 768px) {
     .header .logo {
@@ -185,5 +272,15 @@ h4 {
     .sub-header>div:last-of-type {
         justify-self: center;
         align-self: center;
+    }
+    .text-xl {
+        line-height: 1.3;
+        font-size: 40px;
+    }
+    .sub-text {
+        font-size: 26px;
+    }
+    .categories .covers {
+        grid-template-columns: 1fr;
     }
 }
