--- a/css/style.css
+++ b/css/style.css
@@ -237,6 +237,108 @@ h4 {
     background: url('../assets//cover-4.jpg') no-repeat center center/cover;
 }
 
+.live {
+    background: #151516;
+    padding: 40px;
+}
+
+.live-border {
+    border: 4px solid #1ce783;
+    border-radius: 16px;
+    padding: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.live a {
+    text-transform: uppercase;
+    font-size: 18px;
+    margin-top: 20px;
+    text-decoration: underline;
+}
+
+
+/* Live Sports */
+
+.live-sports {
+    background: url('../assets/live-sports.jpg') no-repeat center center/cover;
+    height: 800px;
+    position: relative;
+}
+
+.live-sports-content {
+    position: absolute;
+    top: 160px;
+    left: 100px;
+    max-width: 550px;
+}
+
+.live-sports-logos {
+    width: 300px;
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.live-sports-logos>div {
+    background: url('../assets/network-logo-bg.png') no-repeat center center/cover;
+    height: 60px;
+    width: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.live-sports-logos img {
+    width: 40px;
+}
+
+
+/* Footer */
+
+.footer {
+    background: #ebedf2;
+    color: #333;
+}
+
+.footer a {
+    color: #333;
+}
+
+.footer-container {
+    max-width: 1100px;
+    margin: auto;
+    padding: 40px;
+}
+
+.footer-lists {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-lists .list-head {
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.divider {
+    width: 100%;
+    height: 3px;
+    border-top: 1px #ccc solid;
+    margin: 30px 0;
+}
+
+.social-icons img {
+    width: 25px;
+    height: 25px;
+    margin-right: 25px;
+}
+
 
 /* Media Queries */
 
@@ -282,5 +384,19 @@ h4 {
     }
     .categories .covers {
         grid-template-columns: 1fr;
+    }
+    .live-border {
+        padding: 30px 10px;
+    }
+    .live-sports {
+        background: url('../assets/live-sports-small.jpg') no-repeat center center/cover;
+    }
+    .live-sports-content {
+        top: 30px;
+        left: 30px;
+        margin-top: 60px;
+    }
+    .footer-lists {
+        flex-direction: column;
     }
 }
